tests/integration/tests/di/ui/fail/injectable_factory_no_return_type.stderr
error: #[injectable_factory] functions must have an explicit return type
 --> tests/di/ui/fail/injectable_factory_no_return_type.rs:6:1
  |
6 | async fn make_service() {
  | ^^^^^^^^^^^^^^^^^^^^^^^
